<resources>
    <string name="app_name">高校学生交流小助手</string>
    <string name="common_str_tip">温馨提示</string>
    <string name="common_str_confirm">确认</string>
    <string name="common_str_cancel">取消</string>
    <string name="common_str_edit">编辑</string>
    <string name="common_str_search">搜索</string>
    <string name="common_str_search_more">搜索更多</string>
    <string name="common_str_finish">完成</string>
    <string name="common_str_ok">好的</string>
    <string name="common_str_submit">提交</string>
    <string name="common_str_left">离开</string>
    <string name="common_str_impeach">举报</string>
    <string name="common_str_delete">删除</string>
    <string name="common_str_delete_success">删除成功</string>
    <string name="common_str_avatar">头像</string>
    <string name="common_str_account">账号</string>
    <string name="common_str_nickname">昵称</string>
    <string name="common_str_collect">收藏</string>
    <string name="common_str_comment">评论</string>
    <string name="common_str_like">点赞</string>
    <string name="common_str_host">主办方</string>
    <string name="common_str_time">时间</string>
    <string name="common_str_address">地点</string>
    <string name="common_str_remark">备注</string>
    <string name="common_str_total">共%1d张</string>
    <string name="common_str_other">其他</string>
    <string name="common_str_refresh">刷新</string>
    <string name="common_str_refresh_success_tip">更新%d条数据</string>
    <string name="common_str_loading_more">正在加载数据...</string>
    <string name="common_str_load_fail">数据加载失败</string>
    <string name="common_str_no_more">没有更多数据了</string>
    <string name="common_str_load_finish">加载完成</string>
    <string name="common_str_relate_topic">关联话题</string>
    <string name="common_str_location">定位</string>
    <string name="common_str_camera">相机</string>
    <string name="common_str_album">相册</string>
    <string name="common_str_upload_picture">上传图片</string>
    <string name="common_str_selected_picture">已选图片</string>
    <string name="common_str_introduce">导语</string>
    <string name="common_str_choose">选择</string>
    <string name="common_str_topic">#%s#</string>
    <string name="common_str_relate_topic_introduce">关联话题导语</string>
    <string name="common_str_relate_topic_cover">关联话题封面</string>
    <string name="common_str_choose_topic_cover">选择话题封面</string>
    <string name="common_tip_no_empty">此项不能为空哦</string>
    <string name="common_tip_no_save">当前页面的数据还未提交保存，确定要离开吗？</string>
    <string name="common_tip_no_network">网络异常，请检查</string>
    <string name="common_tip_request_error">网络异常，请稍后再试</string>
    <string name="common_tip_server_error">服务器异常</string>
    <string name="common_tip_no_data">没有找到相关内容，可能已经被删除</string>
    <string name="common_tip_turn_back">返回上一页</string>
    <string name="common_tip_no_more_new_data">暂无更多新数据</string>
    <string name="common_tip_no_related_content">无相关内容</string>
    <string name="common_tip_comment_success">评论成功</string>
    <string name="common_tip_addition_success">补充成功</string>
    <string name="common_tip_no_operation">没有可操作项</string>
    <string name="common_tip_go_to_create_activity">去创建活动</string>
    <string name="common_tip_go_to_create_topic">去创建话题</string>
    <string name="common_tip_go_to_create_discover">去创建动态</string>
    <string name="common_tip_add_comment">添加评论</string>
    <string name="common_tip_on_publish">正在发布，请稍后...</string>
    <string name="common_tip_on_submit">正在提交，请稍后...</string>
    <string name="common_tip_no_activity_data">暂无相关活动数据</string>
    <string name="common_tip_no_topic_data">暂无话题数据</string>
    <string name="common_tip_no_discover_data">暂无动态数据</string>
    <string name="common_tip_no_message_data">暂无消息数据</string>
    <string name="common_tip_no_self_activity_data">你还没有发布过活动哦~</string>
    <string name="common_tip_no_self_topic_data">你还没有创建过话题哦~</string>
    <string name="common_tip_no_self_discover_data">你还没有发表过动态哦~</string>
    <string name="common_tip_no_self_collect_data">你还没收藏过活动哦~</string>
    <string name="common_tip_no_other_user_activity_data">TA还没发布过活动~</string>
    <string name="common_tip_no_other_user_topic_data">TA还没创建过话题~</string>
    <string name="common_tip_no_other_user_discover_data">TA还没发表过动态~</string>
    <string name="common_tip_no_user_join_topic">暂无用户参与，赶紧抢沙发吧~</string>
    <string name="common_tip_no_comment">暂无评论内容，赶紧抢沙发吧~</string>
    <string name="common_tip_no_addition">没有补充的内容了~</string>
    <string name="common_tip_no_related_activity">没有搜索到相关的活动~</string>
    <string name="common_tip_no_related_user">没有搜索到相关的用户~</string>
    <string name="common_tip_no_related_topic">没有搜索到相关的话题~</string>
    <string name="common_tip_no_related_discover">没有搜索到相关的动态~</string>
    <string name="common_tip_no_related_search_content">没有搜索到相关内容~</string>
    <string name="common_tip_press_again_for_exit">再按一次退出应用</string>
    <string name="common_image_load_fail">图片下载失败</string>
    <string name="common_image_load_success">图片下载成功</string>
    <string name="common_image_save_success">图片已保存到%s</string>
    <string name="common_image_save_fail">图片保存失败</string>
    <string name="title_activity">活动</string>
    <string name="title_topic">话题</string>
    <string name="title_discover">动态</string>
    <string name="title_message">消息</string>
    <string name="title_collect">收藏</string>
    <string name="title_login">用户登录</string>
    <string name="title_sign">注册用户</string>
    <string name="title_find_password">找回密码</string>
    <string name="title_edit_profile">编辑资料</string>
    <string name="title_modify_password">修改密码</string>
    <string name="title_bind_cell_number">绑定手机</string>
    <string name="title_unbind_cell_number">解绑手机</string>
    <string name="title_bind_email">绑定邮箱</string>
    <string name="title_unbind_email">解绑邮箱</string>
    <string name="title_feedback">意见或建议</string>
    <string name="title_settings">设置</string>
    <string name="title_mine">我的</string>
    <string name="title_user_profile">个人中心</string>
    <string name="title_create_activity">创建活动</string>
    <string name="title_create_topic">创建话题</string>
    <string name="title_create_discover">创建动态</string>
    <string name="title_topic_detail">话题详情</string>
    <string name="title_activity_detail">活动详情</string>
    <string name="title_discover_detail">动态详情</string>
    <string name="title_choose_location">选择位置</string>
    <string name="title_impeach_activity">举报活动</string>
    <string name="title_impeach_topic">举报话题</string>
    <string name="title_impeach_discover">举报动态</string>
    <string name="title_impeach_user">举报用户</string>
    <string name="title_impeach_comment">举报评论</string>
    <string name="title_related_user_for_search">相关用户 - %s</string>
    <string name="title_related_activity_for_search">相关活动 - %s</string>
    <string name="title_related_discover_for_search">相关动态 - %s</string>
    <string name="title_related_topic_for_search">相关话题 - %s</string>
    <string name="common_str_join_count">参与&#160;%1d</string>
    <string name="common_str_visit_count">浏览&#160;%1d</string>
    <string name="fm_login_str_account">账号</string>
    <string name="fm_login_str_password">密码</string>
    <string name="fm_login_str_login">登录</string>
    <string name="fm_login_str_on_login">登录中...</string>
    <string name="fm_login_str_not_login">您还未登录</string>
    <string name="fm_login_str_goto_login">去登录</string>
    <string name="fm_login_str_no_account">没有账号？</string>
    <string name="fm_login_str_forget_password">忘记密码？</string>
    <string name="fm_login_tip_empty_account">账号不能为空，请重新输入。</string>
    <string name="fm_login_tip_empty_password">密码不能为空，请重新输入。</string>
    <string name="fm_login_tip_login_before">请先登录</string>
    <string name="fm_login_tip_login_success">登录成功</string>
    <string name="fm_login_tip_login_fail">登录失败，请重新检查您的账号和密码是否正确。</string>
    <string name="fm_sign_str_cell_phone_number">手机号</string>
    <string name="fm_sign_str_account">账号</string>
    <string name="fm_sign_str_nickname">昵称</string>
    <string name="fm_sign_str_password">密码</string>
    <string name="fm_sign_str_confirm_password">确认密码</string>
    <string name="fm_sign_str_sign_up">注册</string>
    <string name="fm_sign_tip_account_exist">账号已被占用，请重新修改</string>
    <string name="fm_login_str_on_sign_up">正在注册，请稍后...</string>
    <string name="fm_sign_str_has_account">已有账号，直接登录</string>
    <string name="fm_sign_tip_empty_account">账号不能为空，请重新输入。</string>
    <string name="fm_sign_tip_empty_cell_number">手机号不能为空，请重新输入。</string>
    <string name="fm_sign_tip_empty_nickname">昵称不能为空，请重新输入。</string>
    <string name="fm_sign_tip_empty_password">密码不能为空，请重新输入。</string>
    <string name="fm_sign_tip_empty_confirm_password">确认密码不能为空，请重新输入。</string>
    <string name="fm_sign_tip_different_password">两次输入的密码不一致，请重新输入。</string>
    <string name="fm_sign_tip_sign_up_success">注册成功</string>
    <string name="fm_sign_tip_sign_up_fail">注册失败</string>
    <string name="fm_find_password_str_cell_phone_number">手机号</string>
    <string name="fm_find_password_str_verification_code">验证码</string>
    <string name="fm_find_password_str_get_verification_code">获取验证码</string>
    <string name="fm_find_password_str_resend">重新发送</string>
    <string name="fm_find_password_tip_empty_cell_phone_number">手机号不能为空，请重新输入。</string>
    <string name="fm_find_password_tip_empty_verify_code">验证码不能为空，请重新输入。</string>
    <string name="modify_password_str_original_password">原密码</string>
    <string name="modify_password_str_new_password">新密码</string>
    <string name="modify_password_str_confirm_new_password">确认密码</string>
    <string name="modify_password_str_confirm_modify">确认修改</string>
    <string name="modify_password_str_on_modify">正在请求，请稍后</string>
    <string name="modify_password_tip_modify_success">密码修改成功</string>
    <string name="modify_password_tip_empty_original_pass">原密码不能为空，请重新输入。</string>
    <string name="modify_password_tip_empty_new_pass">新密码不能为空，请重新输入。</string>
    <string name="modify_password_tip_empty_confirm_new_pass">确认密码不能为空，请重新输入。</string>
    <string name="modify_password_tip_different_new_pass">两次输入的密码不一致，请重新输入。</string>
    <string name="feedback_str_feedback_type">反馈类型</string>
    <string name="feedback_str_feedback_description">内容描述</string>
    <string name="feedback_str_suggestion">意见或建议</string>
    <string name="feedback_str_problem">问题反馈</string>
    <string name="feedback_tip_hint">请留下您的宝贵意见或者问题反馈</string>
    <string name="feedback_tip_feedback_success">反馈成功，感谢您的使用和支持！</string>
    <string name="feedback_tip_impeach_success">举报成功，我们会尽快审查处理，感谢您的使用！</string>
    <string name="feedback_tip_empty_content">反馈内容不能为空哦~</string>
    <string name="search_tip_empty_search_input">请输入搜索内容</string>
    <string name="search_str_search_for_hint">搜索%s</string>
    <string name="search_str_search_default_hint">搜索用户/活动/话题/动态</string>
    <string name="search_str_search_type_all">综合</string>
    <string name="search_str_search_type_user">用户</string>
    <string name="search_str_search_type_activity">活动</string>
    <string name="search_str_search_type_topic">话题</string>
    <string name="search_str_search_type_discover">动态</string>
    <string name="search_str_related_user">相关用户</string>
    <string name="search_str_see_more">查看更多</string>
    <string name="search_str_more_user">查看更多相关用户</string>
    <string name="search_str_more_activity">查看更多相关活动</string>
    <string name="search_str_more_topic">查看更多相关话题</string>
    <string name="search_str_more_discover">查看更多相关动态</string>
    <string name="common_dialog_str_tips_title">温馨提示</string>
    <string name="common_dialog_str_input_title">请输入</string>
    <string name="fm_create_activity_str_type">活动类型</string>
    <string name="fm_create_activity_str_title">活动标题</string>
    <string name="fm_create_activity_str_content">活动内容</string>
    <string name="fm_create_topic_str_choose_cover">选择封面</string>
    <string name="fm_create_topic_str_selected_cover">已选封面</string>
    <string name="fm_create_discover_str_discover_content">动态内容</string>
</resources>