<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:type="spinner"
            app:entries="@array/str_array_create_activity_type"
            app:labelText="@string/fm_create_activity_str_type"
            app:errorText="@string/common_tip_no_empty"
            app:nullable="false"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:type="input"
            app:labelText="@string/fm_create_activity_str_title"
            app:errorText="@string/common_tip_no_empty"
            app:nullable="false" />

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:type="input"
            app:labelText="@string/fm_create_activity_str_content"
            app:errorText="@string/common_tip_no_empty"
            app:minLines="3"
            app:maxLines="5"
            app:nullable="false" />

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_host"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:type="input"
            app:labelText="@string/common_str_host"
            app:errorText="@string/common_tip_no_empty"
            app:nullable="false" />

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:type="input"
            app:labelText="@string/common_str_time"
            app:errorText="@string/common_tip_no_empty"
            app:nullable="false" />

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:type="input"
            app:labelText="@string/common_str_address"
            app:errorText="@string/common_tip_no_empty"
            app:nullable="false" />

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_remark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:type="input"
            app:labelText="@string/common_str_remark" />

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_related_topic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:type="text"
            app:labelText="@string/common_str_relate_topic"
            android:focusable="true"
            android:focusableInTouchMode="true"/>

        <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
            android:id="@+id/input_view_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:type="text"
            app:errorText="@string/common_tip_no_empty"
            app:labelText="@string/common_str_location"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <com.luoruiyong.caa.widget.imageviewlayout.ImageViewLayout
            android:id="@+id/image_view_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="10dp"
            app:maxChildCount="9"
            app:needShowTotalTip="false"
            app:layoutStrategy="grid">
        </com.luoruiyong.caa.widget.imageviewlayout.ImageViewLayout>

        <!--滚动占位-->
        <View
            android:layout_width="1dp"
            android:layout_height="120dp"/>

    </LinearLayout>

</ScrollView>