<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
        android:id="@+id/input_view_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:type="spinner"
        app:spinnerEntries="@array/str_array_feedback_type"
        app:labelText="@string/feedback_str_feedback_type"
        app:errorText="@string/common_tip_no_empty"
        app:nullable="false"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
        android:id="@+id/input_view_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:type="input"
        app:nullable="false"
        app:errorText="@string/common_tip_no_empty"
        app:labelText="@string/feedback_str_feedback_description"
        app:lines="5"/>

    <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
        android:id="@+id/input_view_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:type="image"
        app:maxImageCount="9"
        app:ignoreLastImageItem="true"
        app:labelText="@string/common_str_upload_picture"
        android:focusable="true"
        android:focusableInTouchMode="true" />

</LinearLayout>