<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <View
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
        android:id="@+id/input_view_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:type="input"
        app:nullable="false"
        app:labelText="@string/fm_create_discover_str_discover_content"
        app:errorText="@string/common_tip_no_empty"
        app:minLines="3"
        app:maxLines="5"/>

    <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
        android:id="@+id/input_view_related_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:type="text"
        app:labelText="@string/common_str_relate_topic"
        android:focusable="true"
        android:focusableInTouchMode="true"/>

    <com.luoruiyong.caa.widget.dynamicinputview.DynamicInputView
        android:id="@+id/input_view_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:type="text"
        app:errorText="@string/common_tip_no_empty"
        app:labelText="@string/common_str_location"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <com.luoruiyong.caa.widget.imageviewlayout.ImageViewLayout
        android:id="@+id/image_view_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="10dp"
        app:maxChildCount="9"
        app:needShowTotalTip="false"
        app:layoutStrategy="grid">
    </com.luoruiyong.caa.widget.imageviewlayout.ImageViewLayout>

    <!--滚动占位-->
    <View
        android:layout_width="1dp"
        android:layout_height="120dp"/>

</LinearLayout>